# trend-scope

./: README.md  main.py  multi_agent_supervisor.py  output_mermaid.py  prompts.py  pyproject.toml  state_research.py  state_scope.py  tools.py  trend_research_agent.py  trend_research_agent_scope.py  utils.py
final_reports/: Nigerian_Economic_Trends_for_2025_A_Comprehensive__20250828_152620.md
